--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=JetBrains+Mono:wght@400&family=Syne:wght@700;800&family=Cormorant+Garamond:ital,wght@0,400;1,400&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=JetBrains+Mono:wght@400&family=Syne:wght@700;800&family=VT323&display=swap"
     rel="stylesheet"> />
   <link rel="icon" href="/icon.png" />
 </head>
